--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -31,7 +31,7 @@ input-field {
   dots_center = true
   outer_color = rgba(0, 0, 0, 0)
   inner_color = rgba(0, 0, 0, 0.2)
-  font_color = $foreground
+  font_color = rgba(245, 245, 245, 0.8)
   fade_on_empty = false
   rounding = -1
   check_color = rgb(204, 136, 34)
@@ -69,7 +69,6 @@ label {
 label {
 	monitor =
 	text = Hi there, $USER
-	color = $foreground
 	font_size = 25
 
 	position = 0, -40
