--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -276,8 +276,8 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Screenshot and Print
-bind = , Print, exec, grim | wl-copy
-bindel = , XF86SelectiveScreenshot, exec, grim -g "$(slurp)" | wl-copy
+bind = , Print, exec, grim ~/Pictures/Screenshots/screenshot-$(date +%Y%m%d-%H%M%S).png | wl-copy
+bindel = , XF86SelectiveScreenshot, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot-$(date +%Y%m%d-%H%M%S).png | wl-copy
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
