--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,5 +1,4 @@
-add_newline = false
+# Get editor completions based on the config schema
+"$schema" = 'https://starship.rs/config-schema.json'
 
-[username]
-show_always = true
-disabled = false
+add_newline = false
