--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,8 +33,8 @@ monitor=,highres,auto,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
-
+# $menu = wofi --show drun
+$menu = tofi-drun --drun-launch=true
 
 #################
 ### AUTOSTART ###
