--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,11 @@
+# font
 font_family CaskaydiaMono Nerd Font
 bold_font auto
 italic_font auto
 bold_italic_font auto
 font_size 12.0
+
+# other
 cursor_shape block 
 cursor_blinking yes
 cursor_trail 3
